[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "concmass"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "colossus", "matplotlib", "pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
concmass = ["tables/*.npz"]
